python-programming/src/examples/functions/sum_of_tuple.py
from mysum import mysum

z = (2, 3, 5, 6)

mysum(z)

